[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "okflint"
authors = [
  {name = "Matthieu Daviaud", email = "matthieu.daviaud@gmail.com"},
]
version = "0.1.0"
description = "Linter de conformité pour bases documentaires OKF (Open Knowledge Format) — le Ruff de la documentation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["okf", "open-knowledge-format", "linter", "documentation", "markdown", "frontmatter", "knowledge-base", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/mattdav/okflint"
Repository = "https://github.com/mattdav/okflint"
Issues = "https://github.com/mattdav/okflint/issues"
Documentation = "https://okflint.readthedocs.io"

[project.scripts]
okflint = "okflint.cli:main"

[project.optional-dependencies]
# Extras installables par les utilisateurs du package (pip install okflint[docs])
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-autodoc-typehints>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "beartype>=0.19.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests", "src/okflint"]
addopts = [
    "--doctest-modules",
    "--cov=src/okflint",
    "--cov-report=term-missing",
    "--cov-report=html",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/okflint"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
skip_empty = true

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/okflint"]

[tool.hatch.build.targets.wheel.force-include]
"src/okflint/py.typed" = "okflint/py.typed"

[dependency-groups]
# Outils de développement local — jamais installés par un utilisateur PyPI
dev = [
    "invoke>=3.0.3",
    "types-pyyaml>=6.0.12.20260518",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "beartype>=0.19.0",
]
