[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "okflint"
authors = [
  {name = "Matthieu Daviaud", email = "matthieu.daviaud@gmail.com"},
]
version = "0.1.0"
description = "Compliance linter for OKF (Open Knowledge Format) documentary bases — the Ruff of documentation."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["okf", "open-knowledge-format", "linter", "documentation", "markdown", "frontmatter", "knowledge-base", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/mattdav/okflint"
Repository = "https://github.com/mattdav/okflint"
Issues = "https://github.com/mattdav/okflint/issues"
Documentation = "https://okflint.readthedocs.io"
Rules = "https://github.com/mattdav/okflint/blob/main/config/RULES.md"

[project.scripts]
okflint = "okflint.cli:main"

[project.optional-dependencies]
# Only user-facing extra: building the Sphinx docs
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests", "src/okflint"]
addopts = [
    "--doctest-modules",
    "--cov=src/okflint",
    "--cov-report=term-missing",
    "--cov-report=html",
]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/okflint"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
skip_empty = true

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/okflint"]

[tool.hatch.build.targets.wheel.force-include]
"src/okflint/py.typed" = "okflint/py.typed"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:^version",
    "src/okflint/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
# Local development tools — never installed by a PyPI user
dev = [
    "invoke>=3.0.3",
    "types-pyyaml>=6.0.12.20260518",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "beartype>=0.19.0",
    "commitizen>=3.29.0",
]
